--- a/data/nginx/nginx.conf
+++ b/data/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name example.com;
+    server_name news.ssangyongsports.org;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
@@ -14,11 +14,11 @@ server {
 
 server {
     listen 443 ssl;
-    server_name example.com;
+    server_name news.ssangyongsports.org;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/news.ssangyongsports.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/news.ssangyongsports.org/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
